# python-bp-2025

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.cursor/: settings.json
src/: hello.py
src/python_bp_2025/: __init__.py
tests/: __init__.py  test_hello.py
