[project]
name = "python-bp-2025"
version = "0.1.0"
description = "A Python project using uv"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = []
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"
