[project]
name = "python-bp-2025"
version = "0.1.0"
description = "A Python project using uv and optimized for Cursor IDE"
authors = [
    { name = "Matthew Stanton", email = "mrstanton81@gmail.com" }
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.isort]
known-first-party = ["python_bp_2025"]

[tool.ruff.per-file-ignores]
"tests/*" = ["E501"]
